--- a/config/scaffolding/SIQA_GIT_2003Project.yml
+++ b/config/scaffolding/SIQA_GIT_2003Project.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/rimabarman
   gitUsername: rimabarman
   gitBranch: main
+services:
+- serviceName: project.siqa_git_2003.integrations:AlertsCRTandERT
+  packages:
+  - name: SIQA_GIT_2003Project
+    version: "1.0"
+- serviceName: pub.alert:emit
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2105
