--- a/config/scaffolding/SIQA_GIT_2003Project.yml
+++ b/config/scaffolding/SIQA_GIT_2003Project.yml
@@ -16,3 +16,19 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2105
+- serviceName: project.siqa_git_2003.integrations:deepclonetest
+  packages:
+  - name: SIQA_GIT_2003Project
+    version: "1.0"
+- serviceName: pub.string:stringToBytes
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2105
+- serviceName: pub.utils:deepClone
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2105
+- serviceName: pub.string:bytesToString
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2105
