--- a/config/scaffolding/SIQA_GIT_2003Project.yml
+++ b/config/scaffolding/SIQA_GIT_2003Project.yml
@@ -8,6 +8,10 @@ packages:
   gitUsername: rimabarman
   gitBranch: main
 services:
+- serviceName: project.siqa_git_2003.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:DBInsert
+  packages:
+  - name: SIQA_GIT_2003Project
+    version: "1.0"
 - serviceName: project.siqa_git_2003.integrations:AlertsCRTandERT
   packages:
   - name: SIQA_GIT_2003Project
@@ -16,6 +20,10 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2105
+- serviceName: project.siqa_git_2003.integrations:SIQAAdapterFlow
+  packages:
+  - name: SIQA_GIT_2003Project
+    version: "1.0"
 - serviceName: project.siqa_git_2003.integrations:deepclonetest
   packages:
   - name: SIQA_GIT_2003Project
